<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iBridge</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_bridge_detail">桥梁详情</string>
    <string name="action_project_detail">项目详情</string>
    <string name="action_disease_add">添加病害</string>
    <string name="action_delete_image">删除图片</string>
    <string name="action_bridge_statistics">病害统计</string>
    <string name="action_upload">上传</string>
    <string name="action_download">下载</string>
    <string name="action_settings">设置</string>
    <string name="action_logout">登出</string>
    <string name="action_save">保存</string>
    <string name="action_cancel">取消</string>
    <string name="action_done">完成</string>
    <string name="action_operate_tips">你可以进行的操作</string>
    <string name="action_copy">复制</string>
    <string name="action_delete">删除</string>
    <string name="action_refresh">刷新</string>
    <string name="method_name_0">坐标记录</string>
    <string name="method_name_1">位置记录</string>
    <string name="method_name_2">统计记录</string>
    <string name="method_name_3">详细记录</string>
    <string name="method_name_4">统计记录</string>
    <string name="method_name_5">描述记录</string>
    <string name="record_seconds">%1$s 秒</string>

    <string name="title">桥梁检测数据管理系统</string>
    <string name="company">苏交科</string>
    <string name="login">登录</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="as_checker">审核人登录</string>

    <string-array name="disease_input_type1">
        <item>startpoint</item>
        <item>endpoint</item>
        <item>length</item>
        <item>width</item>
        <item>imagenumber</item>
        <item>moreinfo</item>
    </string-array>
    <string-array name="disease_input_type2">
        <item>position</item>
        <item>length</item>
        <item>width</item>
        <item>imagenumber</item>
        <item>moreinfo</item>
    </string-array>
    <string-array name="disease_input_type3">
        <item>position</item>
        <item>length</item>
        <item>width</item>
        <item>imagenumber</item>
        <item>moreinfo</item>
    </string-array>
    <string-array name="disease_input_type4">
        <item>position</item>
        <item>length</item>
        <item>width</item>
        <item>imagenumber</item>
        <item>moreinfo</item>
    </string-array>
    <string-array name="disease_input_type5">
        <item>position</item>
        <item>description</item>
        <item>imagenumber</item>
        <item>moreinfo</item>
    </string-array>

    <string-array name="disease_type_0">
        <item>剥落露筋</item>
        <item>裂缝</item>
        <item>剥落</item>
        <item>空洞</item>
        <item>孔洞</item>
        <item>蜂窝</item>
        <item>麻面</item>
        <item>磨损</item>
        <item>挠度</item>
        <item>变位</item>
        <item>预应力构件损伤</item>
        <item>保护层厚度</item>
        <item>钢筋锈蚀</item>
        <item>混凝土碳化</item>
        <item>混凝土强度</item>
        <item>其他</item>
    </string-array>

    <string-array name="disease_type_1">
        <item>剥落露筋</item>
        <item>裂缝</item>
        <item>剥落</item>
        <item>空洞</item>
        <item>孔洞</item>
        <item>蜂窝</item>
        <item>麻面</item>
        <item>磨损</item>
        <item>挠度</item>
        <item>变位</item>
        <item>保护层厚度</item>
        <item>钢筋锈蚀</item>
        <item>混凝土碳化</item>
        <item>混凝土强度</item>
        <item>其他</item>
    </string-array>

    <string-array name="disease_type_2">
        <item>脱空</item>
        <item>剪切变形</item>
        <item>板式支座老化、开裂</item>
        <item>板式支座外鼓</item>
        <item>板式支座外鼓、钢板外露</item>
        <item>盆式支座组件损坏</item>
        <item>聚四氟乙烯滑板磨损</item>
        <item>盆式支座位移</item>
        <item>位移</item>
        <item>转角</item>
        <item>钢支座缺陷</item>
        <item>钢支座部件裂缝</item>
        <item>其他</item>
    </string-array>

    <string-array name="disease_type_3">
        <item>破损</item>
        <item>裂缝</item>
        <item>鼓胀</item>
        <item>砌体松动</item>
        <item>位移</item>
        <item>其他</item>
    </string-array>

    <string-array name="disease_type_4">
        <item>破损</item>
        <item>裂缝</item>
        <item>冲刷</item>
        <item>其他</item>
    </string-array>

    <string-array name="disease_type_5">
        <item>剥落露筋</item>
        <item>裂缝</item>
        <item>剥落</item>
        <item>空洞</item>
        <item>孔洞</item>
        <item>蜂窝</item>
        <item>麻面</item>
        <item>磨损</item>
        <item>变位</item>
        <item>保护层厚度</item>
        <item>钢筋锈蚀</item>
        <item>混凝土碳化</item>
        <item>混凝土强度</item>
        <item>其他</item>
    </string-array>

    <string-array name="disease_type_6">
        <item>剥落露筋</item>
        <item>裂缝</item>
        <item>剥落</item>
        <item>空洞</item>
        <item>孔洞</item>
        <item>蜂窝</item>
        <item>麻面</item>
        <item>磨损</item>
        <item>变位</item>
        <item>保护层厚度</item>
        <item>钢筋锈蚀</item>
        <item>混凝土碳化</item>
        <item>混凝土强度</item>
        <item>桥头跳车</item>
        <item>台背排水</item>
        <item>其他</item>
    </string-array>

    <string-array name="disease_type_7">
        <item>冲刷、淘空</item>
        <item>剥落露筋</item>
        <item>冲蚀</item>
        <item>河底铺砌损坏</item>
        <item>沉降</item>
        <item>滑移和倾斜</item>
        <item>裂缝</item>
        <item>其他</item>
    </string-array>

    <string-array name="disease_type_8">
        <item>堵塞</item>
        <item>冲刷</item>
        <item>河床变迁</item>
        <item>其他</item>
    </string-array>

    <string-array name="disease_type_9">
        <item>损坏</item>
        <item>冲刷</item>
        <item>变形</item>
        <item>其他</item>
    </string-array>

    <string-array name="disease_type_10">
        <item>破损</item>
        <item>裂缝</item>
        <item>泛油</item>
        <item>剥落</item>
        <item>磨光、脱皮、露骨</item>
        <item>错台</item>
        <item>坑洞</item>
        <item>拱起</item>
        <item>接缝料损坏</item>
        <item>变形</item>
        <item>其他</item>
    </string-array>

    <string-array name="disease_type_11">
        <item>垃圾填塞</item>
        <item>凹凸不平</item>
        <item>锚固区破损</item>
        <item>破损</item>
        <item>失效</item>
        <item>变形过大</item>
        <item>其他</item>
    </string-array>

    <string-array name="disease_type_12">
        <item>破损</item>
        <item>缺失</item>
        <item>其他</item>
    </string-array>

    <string-array name="disease_type_13">
        <item>撞坏</item>
        <item>缺失</item>
        <item>破损</item>
        <item>其他</item>
    </string-array>

    <string-array name="disease_type_14">
        <item>排水不畅</item>
        <item>破损</item>
        <item>缺陷</item>
        <item>其他</item>
    </string-array>

    <string-array name="disease_type_15">
        <item>损坏</item>
        <item>缺失</item>
        <item>其他</item>
    </string-array>
</resources>
