<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://robobinding.org/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_efefef">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="@dimen/font_size_36"
            android:textColor="@color/color_333333"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/title"
            android:textSize="@dimen/font_size_40"
            android:textColor="@color/color_333333"
            android:textStyle="bold"
            android:layout_marginBottom="50dp"/>

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/user_name"
            style="@style/BaseInput"/>

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            style="@style/BaseInput"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="@dimen/margin_15"
            android:paddingLeft="@dimen/margin_10"
            android:text="@string/as_checker"
            android:textSize="@dimen/font_size_30"
            android:textColor="@color/color_333333"
            android:button="@drawable/selector_checkbox"
            android:id="@+id/checkBox"/>

        <Button
            style="@style/Button1"
            android:text="@string/login"
            bind:onClick="login"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_15">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:text="@string/company"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/font_size_30"/>
    </LinearLayout>
</RelativeLayout>

